# raytracing

./: Cargo.toml
examples/: load_obj.rs
src/: algebra.rs  background.rs  camera.rs  color.rs  emittable.rs  hittable.rs  lib.rs  main.rs  material.rs  opt.rs  pdf.rs  random.rs  ray.rs  scene.rs  texture.rs  vec3.rs
src/background/: gradation.rs  solid_background.rs
src/hittable/: aabb.rs  box_obj.rs  bvh.rs  constant_medium.rs  hittable_list.rs  rect.rs  sphere.rs  transform.rs  triangle.rs
src/material/: dielectric.rs  diffuse_light.rs  isotropic.rs  lambertian.rs  metal.rs
src/texture/: checker.rs  image_texture.rs  noise.rs  solid_color.rs
