[package]
name = "raytracing"
version = "0.1.0"
authors = ["minus3theta <yone_j_synthesis@yahoo.co.jp>"]
edition = "2018"

[dependencies]
impl_ops = "0.1.1"
rand = "0.8.3"
indicatif = "0.15.0"
rayon = "1.5.0"
ordered-float = "2.1.1"
structopt = "0.3.21"
image = "0.23.14"
anyhow = "1.0.38"
obj = "0.10.2"
